# Hybrid-Integration-of-Avionics-Components

./: README.md  xplane_cmd_test.py
flight_gui/: index.html  server.py
xplane_bridge/: CMakeLists.txt
xplane_bridge/src/: afdx_builder.cpp  afdx_builder.hpp  afdx_pdu.hpp  flight_state.hpp  main.cpp  time_utils.hpp  udp_rx.cpp  udp_rx.hpp  xplane_decoder.cpp  xplane_decoder.hpp
xplane_bridge/src/pi-a/: ECIC.xml  pi_a_ed247.cpp  pi_a_ed247_sender.cpp
xplane_bridge/src/pi-b/: ECIC.xml  pi_b_ed247.cpp  pi_b_ed247_control_sender.cpp  pi_b_ed247_receiver.cpp
xplane_bridge/src/receiver/: ECIC.xml  flightstate_udp_pub.hpp  pi_b_ed247_receiver.cpp
xplane_bridge/src/sender/: ECIC.xml  pi_a_ed247_sender.cpp
